# mmdetection-maskformer

./: .gitignore  README.md  evaluation-instructions.md  installation-instructions.md  instruction.txt  note.ipynb  pyproject.toml
apps/: README.md  panoptic_inference_app.py
carbon_logs/: powermetrics_log.txt
configs/: run_config.yaml
outputs/: run_metrics.csv
scripts/: eval_subset.py
